apps/base/media/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
  name: bazarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy: {}
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      securityContext:
        fsGroup: 2000
        runAsUser: 2003
        runAsGroup: 2000
      containers:
        - image: lscr.io/linuxserver/bazarr:v1.6.2-ls366
          name: bazarr
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: run
              mountPath: /run
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data/media
              subPath: media
          resources:
            limits:
              memory: 320Mi
            requests:
              cpu: 5m
              memory: 320Mi
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: run
          emptyDir:
            sizeLimit: 500Mi
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media-data
