apps/base/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bazarr
  name: bazarr
  namespace: media
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 6767
  selector:
    app: bazarr
  type: ClusterIP
