apps/base/media/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: bazarr.local
      http:
        paths:
          - backend:
              service:
                name: bazarr
                port:
                  number: 80
            path: /
            pathType: Prefix
